fixed some styling issues on mobile safari

--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -95,6 +95,14 @@ $grad1: linear-gradient(
     animation: bg-animation 30s infinite alternate;
     clip-path: polygon(0px 0px, 100% 0px, 100% calc(100% - 2rem), 0px 100%);
 
+    @media (min-width: 1100px) {
+      background-size: 600%;
+    }
+
+    @media (max-width: 1100px) {
+      min-height: 75vh;
+    }
+
     #name,
     #subtitle {
       color: whitesmoke;
@@ -242,6 +250,7 @@ $grad1: linear-gradient(
 
         .tech-box {
           margin-right: 10px;
+          margin-bottom: 10px;
           border-radius: 5px;
           padding: 5px;
           // border-color: silver;
@@ -256,6 +265,14 @@ $grad1: linear-gradient(
         @media (max-width: 450px) {
           .tech-box {
             font-size: 0.5rem;
+          }
+        }
+
+        @media (max-width: 415px) {
+          .tech-box {
+            font-size: 0.5rem;
+            padding: 3px;
+            margin-right: 7px;
           }
         }
       }
@@ -317,17 +334,19 @@ $grad1: linear-gradient(
           flex-direction: row;
           align-items: center;
           justify-content: space-around;
+          // width: 100%;
 
           .icon {
             color: $textColor;
             font-size: 2rem;
             margin: auto;
-            padding: 15%;
+            padding: 15% 0%;
             // margin: 50px;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-around;
+            width: 100%;
           }
 
           #LI {
